# api/handler/auth_gin_handler.go
@@ -4,18 +4,25 @@ import (
 	"authentication-service/models"
 	"authentication-service/service"
 	"authentication-service/service/token"
+	"context"
+	"log"
 	"net/http"
 	"time"
 
 	"github.com/gin-gonic/gin"
+
+	// "github.com/labstack/gommon/log"
+	"github.com/redis/go-redis/v9"
 )
 
 type AuthenticationGINHandler struct {
 	authService service.AuthService
+	userService service.UserService
+	redis       *redis.Client
 }
 
-func NewAuthenticationHandler(authService service.AuthService) AuthenticationHandler {
-	return &AuthenticationGINHandler{authService}
+func NewAuthenticationHandler(authService service.AuthService, userService service.UserService, reConn *redis.Client) AuthenticationHandler {
+	return &AuthenticationGINHandler{authService, userService, reConn}
 }
 
 // @Summary SigUp user
@@ -39,7 +46,7 @@ func (a *AuthenticationGINHandler) RegisterHandler(c *gin.Context) {
 
 	user, err := a.authService.Register(createUser)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, models.Errors{err.Error()})
+		c.JSON(http.StatusBadRequest, models.Errors{Error: err.Error()})
 		return
 	}
 
@@ -66,7 +73,7 @@ func (a *AuthenticationGINHandler) LoginHandler(c *gin.Context) {
 
 	res, err := a.authService.Login(login)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, models.Errors{err.Error()})
+		c.JSON(http.StatusBadRequest, models.Errors{Error: err.Error()})
 	}
 
 	c.JSON(http.StatusOK, res)
@@ -88,25 +95,25 @@ func (a *AuthenticationGINHandler) LoginHandler(c *gin.Context) {
 func (a *AuthenticationGINHandler) VerifyTokenHandler(c *gin.Context) {
 	refreshToken, err := c.Cookie("refresh_token")
 	if err != nil {
-		c.JSON(http.StatusBadRequest, models.Errors{err.Error()})
+		c.JSON(http.StatusBadRequest, models.Errors{Error: err.Error()})
 		return
 	}
 
 	value, check := c.Get("claims")
 	if !check {
-		c.JSON(http.StatusBadRequest, models.Errors{err.Error()})
+		c.JSON(http.StatusBadRequest, models.Errors{Error: err.Error()})
 		return
 	}
 
 	claims, ok := value.(*token.Claims)
 	if !ok {
-		c.JSON(http.StatusBadRequest, models.Errors{err.Error()})
+		c.JSON(http.StatusBadRequest, models.Errors{Error: err.Error()})
 		return
 	}
 
 	res, err := a.authService.RefreshToken(claims)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, models.Errors{err.Error()})
+		c.JSON(http.StatusBadRequest, models.Errors{Error: err.Error()})
 		return
 	}
 
@@ -118,20 +125,85 @@ func (a *AuthenticationGINHandler) VerifyTokenHandler(c *gin.Context) {
 	c.JSON(http.StatusOK, res)
 }
 
+// @Summary Forgot Password Request
+// @Description Sending a code to the Email
+// @Tags Auth
+// @Accept json
+// @Produce json
+// @Param Email body models.Email true "send a secret token to the email"
+// @Failure 400 {object} models.Errors
+// @Failure 404 {object} models.Errors
+// @Failure 500 {object} models.Errors
+// @Router /forgot-password [post]
 func (a *AuthenticationGINHandler) ForgotPasswordHandler(c *gin.Context) {
+
 	var email models.Email
 	if err := c.ShouldBindJSON(&email); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 	}
 
-	mesaage, err := a.authService.ResetTokenToEmail(email)
+	valideEmail, err := service.ValidateEmail(email.Email)
+	if valideEmail == "" {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid email"})
+		return
+	}
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	c.JSON(http.StatusOK, mesaage)
+
+	if _, err := a.authService.ResetTokenToEmail(email); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	go func() {
+		subject := "Password Recovery"
+		secretToken, err := token.GenerateToken(valideEmail, "", "")
+		if err != nil {
+			log.Println("Failed to generate token", err)
+			return
+		}
+
+		message := "Secure password recovery"
+
+		msg, err := service.SendEmail([]string{valideEmail}, subject, secretToken, message)
+		if err != nil {
+			log.Println("Failed to send email", "error", err)
+			return
+		}
+
+		a.redis.Set(context.Background(), valideEmail, secretToken, time.Minute*10)
+
+		log.Printf("Email sent: %s", msg)
+
+	}()
+
+	c.JSON(http.StatusOK, gin.H{"message": "Password reset instructions sent to your email"})
 }
 
+// @Summary Verify the password reset instructions
+// @Description Verify the password reset instructions
+// @Tags Auth
+// @Accept json
+// @Produce json
+// @Param UpdatePassword body models.UpdatePassword true "password reset instructions"
+// @Failure 400 {object} models.Errors
+// @Failure 404 {object} models.Errors
+// @Failure 500 {object} models.Errors
+// @Router /reset-password [post]
 func (a *AuthenticationGINHandler) ResetPasswordHandler(c *gin.Context) {
-	// Your handler logic here
+	var updatePassword models.UpdatePassword
+	if err := c.ShouldBindJSON(&updatePassword); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	_, err := a.authService.RecoveryPassword(updatePassword)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"message": "Password updated successfully"})
 }
